<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Sree Harsha Mamilla.
  -->

<resources>

    <string name="app_name">Lobesplit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="thanks">Thank You! (:</string>
    <string name="textsize">25dp</string>
    <string name="fontfamily">times</string>
    <string name="about_desc"> A fun Android music player that lets you listen
        to two different songs simultaneously from each headphone</string>

    <string name="textcolor">#F7BE81</string>


</resources>
