<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Sree Harsha Mamilla.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
   >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_desc"
        android:id="@+id/textView3"
        android:fontFamily="@string/fontfamily"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:textColor="@string/textcolor"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@string/textsize"
        android:fontFamily="@string/fontfamily"
        android:text="@string/thanks"
        android:id="@+id/textView"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="@string/textcolor"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linearLayout2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="From"
            android:fontFamily="@string/fontfamily"
            android:id="@+id/textView2"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@string/textcolor"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/background"
            />
    </LinearLayout>


</LinearLayout>
